Refactor: Comprehensive Code Cleanup and Optimization